--- a/index.html
+++ b/index.html
@@ -11,3 +11,9 @@
   <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
+
+for (let i = 0; i < guineaPigs.length; i++){
+  let element = document.createElement("div");
+  element.innerText = guineaPigs[i];
+  document.body.appendChild(element);
+}
